--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,6 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mesto</title>
-  <!-- <link rel="stylesheet" href="../pages/index.css"> -->
-  <!-- <script src="../src/cards.js" defer></script> -->
-  <!-- <script src="../src/index.js" defer></script> -->
 
 </head>
 <body class="page">
@@ -18,11 +15,11 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image" style="background-image: url(<%=require('../src/images/avatar.jpg')%>);"></div>
+      <div class="profile__image"></div>
       <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <h1 class="profile__title"></h1>
         <button class="profile__edit-button" type="button" aria-label="редактирование профиля"></button>
-        <p class="profile__description">Исследователь океана</p>
+        <p class="profile__description"></p>
       </div>
       <button class="profile__add-button" type="button" aria-label="добавление места"></button>
     </section>
@@ -40,9 +37,11 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+      <form class="popup__form" name="edit-profile" novalidate>
+        <input type="text" name="name" id="popup__input_type_name" class="popup__input popup__input_type_name" placeholder="Имя" minlength="2" maxlength="40" pattern="[а-яА-ЯёЁa-zA-Z\s\-]+" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+        <span class="popup__input-error popup__input_type_name-error"></span>
+        <input type="text" name="description" id="popup__input_type_description" class="popup__input popup__input_type_description" placeholder="Занятие" minlength="2" maxlength="200" pattern="[а-яА-ЯёЁa-zA-Z\s\-]+" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+        <span class="popup__input-error popup__input_type_description-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -52,8 +51,10 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <input type="text" name="place-name" id="popup__input_type_card-name" class="popup__input popup__input_type_card-name" placeholder="Название" minlength="2" maxlength="30" pattern="[а-яА-ЯёЁa-zA-Z\s\-]+" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+        <span class="popup__input-error popup__input_type_card-name-error"></span>
+        <input type="url" name="link" id="popup__input_type_url" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>   
+        <span class="popup__input-error popup__input_type_url-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -65,6 +66,17 @@
       <p class="popup__caption"></p>
     </div>
   </div>
+  <div class="popup popup_type_new-avatar popup_is-animated">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="new-avatar">
+        <input type="url" name="link" id="popup_type_new-avatar" class="popup__input popup_type_new-avatar-name" placeholder="Новое фото" required>
+        <span class="popup__input-error popup_type_new-avatar-error"></span>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
 </div>
 
 <template id="card-template">
@@ -74,7 +86,9 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button" aria-label="лайкнуть карточку"></button>
+      <div class="card__likes-container">
+        <button type="button" class="card__like-button" aria-label="лайкнуть карточку"></button>
+      </div>
     </div>
   </li>
 </template>
