--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,10 @@
         <span class="popup__input-error popup__input_type_name-error"></span>
         <input type="text" name="description" id="popup__input_type_description" class="popup__input popup__input_type_description" placeholder="Занятие" minlength="2" maxlength="200" pattern="[а-яА-ЯёЁa-zA-Z\s\-]+" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
         <span class="popup__input-error popup__input_type_description-error"></span>
-        <button type="submit" class="button popup__button">Сохранить</button>
+        <button type="submit" class="button popup__button">
+          <span class="popup__button_initial-text popup_button_text-is-visible">Сохранить</span>
+          <span class="popup__button_loading-text">Сохранение...</span>
+        </button>
       </form>
     </div>
   </div>
@@ -55,7 +58,10 @@
         <span class="popup__input-error popup__input_type_card-name-error"></span>
         <input type="url" name="link" id="popup__input_type_url" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>   
         <span class="popup__input-error popup__input_type_url-error"></span>
-        <button type="submit" class="button popup__button">Сохранить</button>
+        <button type="submit" class="button popup__button">
+          <span class="popup__button_initial-text popup_button_text-is-visible">Сохранить</span>
+          <span class="popup__button_loading-text">Сохранение...</span>
+        </button>
       </form>
     </div>
   </div>
@@ -71,10 +77,20 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Обновить аватар</h3>
       <form class="popup__form" name="new-avatar">
-        <input type="url" name="link" id="popup_type_new-avatar" class="popup__input popup_type_new-avatar-name" placeholder="Новое фото" required>
+        <input type="url" name="link" id="popup_type_new-avatar" class="popup__input popup_type_new-avatar" placeholder="Новое фото" required>
         <span class="popup__input-error popup_type_new-avatar-error"></span>
-        <button type="submit" class="button popup__button">Сохранить</button>
+        <button type="submit" class="button popup__button">
+          <span class="popup__button_initial-text popup_button_text-is-visible">Сохранить</span>
+          <span class="popup__button_loading-text">Сохранение...</span>
+        </button>
       </form>
+    </div>
+  </div>
+  <div class="popup popup_type_delete-confirm popup_is-animated">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Вы уверены?</h3>
+      <button type="button" class="button popup__button popup__button_delete-confirm">Да</button>
     </div>
   </div>
 </div>
