--- a/src/index.html
+++ b/src/index.html
@@ -35,14 +35,14 @@
   </footer>
   <div class="popup popup_type_edit popup_is-animated">
     <div class="popup__content">
-      <button type="button" class="popup__close"></button>
+      <button type="button" class="popup__close" aria-label="закрыть окно"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="edit-profile" novalidate>
         <input type="text" name="name" id="popup__input_type_name" class="popup__input popup__input_type_name" placeholder="Имя" minlength="2" maxlength="40" pattern="[а-яА-ЯёЁa-zA-Z\s\-]+" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
         <span class="popup__input-error popup__input_type_name-error"></span>
         <input type="text" name="description" id="popup__input_type_description" class="popup__input popup__input_type_description" placeholder="Занятие" minlength="2" maxlength="200" pattern="[а-яА-ЯёЁa-zA-Z\s\-]+" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
         <span class="popup__input-error popup__input_type_description-error"></span>
-        <button type="submit" class="button popup__button">
+        <button type="submit" class="button popup__button" aria-label="сохранить новые данные профиля">
           <span class="popup__button_initial-text popup_button_text-is-visible">Сохранить</span>
           <span class="popup__button_loading-text">Сохранение...</span>
         </button>
@@ -51,14 +51,14 @@
   </div>
   <div class="popup popup_type_new-card popup_is-animated">
     <div class="popup__content">
-      <button type="button" class="popup__close"></button>
+      <button type="button" class="popup__close" aria-label="закрыть окно"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place">
         <input type="text" name="place-name" id="popup__input_type_card-name" class="popup__input popup__input_type_card-name" placeholder="Название" minlength="2" maxlength="30" pattern="[а-яА-ЯёЁa-zA-Z\s\-]+" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
         <span class="popup__input-error popup__input_type_card-name-error"></span>
         <input type="url" name="link" id="popup__input_type_url" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>   
         <span class="popup__input-error popup__input_type_url-error"></span>
-        <button type="submit" class="button popup__button">
+        <button type="submit" class="button popup__button" aria-label="сохранить новую карточку">
           <span class="popup__button_initial-text popup_button_text-is-visible">Сохранить</span>
           <span class="popup__button_loading-text">Сохранение...</span>
         </button>
@@ -67,19 +67,19 @@
   </div>
   <div class="popup popup_type_image popup_is-animated">
     <div class="popup__content popup__content_content_image">
-      <button type="button" class="popup__close"></button>
+      <button type="button" class="popup__close" aria-label="закрыть окно"></button>
       <img src="" alt="" class="popup__image">
       <p class="popup__caption"></p>
     </div>
   </div>
   <div class="popup popup_type_new-avatar popup_is-animated">
     <div class="popup__content">
-      <button type="button" class="popup__close"></button>
+      <button type="button" class="popup__close" aria-label="закрыть окно"></button>
       <h3 class="popup__title">Обновить аватар</h3>
       <form class="popup__form" name="new-avatar">
         <input type="url" name="link" id="popup_type_new-avatar" class="popup__input popup_type_new-avatar" placeholder="Новое фото" required>
         <span class="popup__input-error popup_type_new-avatar-error"></span>
-        <button type="submit" class="button popup__button">
+        <button type="submit" class="button popup__button" aria-label="сохранить новый аватар">
           <span class="popup__button_initial-text popup_button_text-is-visible">Сохранить</span>
           <span class="popup__button_loading-text">Сохранение...</span>
         </button>
@@ -88,9 +88,9 @@
   </div>
   <div class="popup popup_type_delete-confirm popup_is-animated">
     <div class="popup__content">
-      <button type="button" class="popup__close"></button>
+      <button type="button" class="popup__close" aria-label="закрыть окно"></button>
       <h3 class="popup__title">Вы уверены?</h3>
-      <button type="button" class="button popup__button popup__button_delete-confirm">Да</button>
+      <button type="button" class="button popup__button popup__button_delete-confirm" aria-label="Кнопка подтверждения удаления карточки">Да</button>
     </div>
   </div>
 </div>
