--- a/src/index.html
+++ b/src/index.html
@@ -104,6 +104,7 @@
       </h2>
       <div class="card__likes-container">
         <button type="button" class="card__like-button" aria-label="лайкнуть карточку"></button>
+        <div class="card__likes-quantity"></div>
       </div>
     </div>
   </li>
